@@ -1,33 +1,58 @@
 package com.vnpt.intership.news.api.v1.config.security;
 
+import com.maxmind.geoip2.DatabaseReader;
+import com.vnpt.intership.news.api.v1.service.impl.UserDetailServiceImpl;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.BeanIds;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.builders.WebSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.util.ResourceUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import ua_parser.Parser;
 
+import java.io.File;
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableGlobalMethodSecurity(prePostEnabled = true, securedEnabled = true)
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+public class WebSecurityConfig {
 
-    @Override
-    public void configure(WebSecurity web) throws Exception {
-        super.configure(web);
-        web.ignoring().antMatchers("/api-docs/**", "/swagger-ui-custom.html", "/swagger-ui/**");
+    @Autowired
+    private UnauthorizedEntryPoint unauthorizedEntryPoint;
+
+    @Bean
+    public AuthenticationTokenFilter authenticationJwtTokenFilter() {
+        return new AuthenticationTokenFilter();
+    }
+
+    @Bean
+    public WebSecurityCustomizer configure() {
+        return (web) -> web.ignoring().antMatchers("/resources/templates/**")
+                .antMatchers("/resources/maxmind/**")
+                .antMatchers("/api-docs/**", "/swagger-ui-custom.html", "/swagger-ui/**");
     }
 
     @Bean
@@ -35,37 +60,49 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
         return new BCryptPasswordEncoder(10);
     }
 
+//    @Bean
+//    public void authenticationManagerBuilder(AuthenticationManagerBuilder authenticationManagerBuilder) throws Exception {
+//        authenticationManagerBuilder.userDetailsService(userDetailService).passwordEncoder(passwordEncoder());
+//    }
 
-    @Override
-    protected void configure(AuthenticationManagerBuilder auth) {
+    @Bean(BeanIds.AUTHENTICATION_MANAGER)
+    public AuthenticationManager authenticationManagerBean(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 
     @Bean
-    @Override
-    public AuthenticationManager authenticationManagerBean() throws Exception {
-        return super.authenticationManagerBean();
-    }
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//        http.headers()
+//                .contentSecurityPolicy("script-src 'self' https://domain.example.com; " +
+//                        "object-src https://domain.example.com; report-uri /csp-report-endpoint/");
 
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        // enable cors and disable CSRF
+        // enable cors and prevent CSRF
+//        http = http.cors().and().csrf().csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()).and();
         http = http.cors().and().csrf().disable();
-
         // set session management stateless
         http = http.sessionManagement()
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS).and();
 
         // set unauthorized request exception handler
+        http = http.exceptionHandling()
+                .authenticationEntryPoint(this.unauthorizedEntryPoint).and();
 
         // set permission on endpoints
         http.authorizeHttpRequests()
                 .antMatchers("/api/v1/auth/**").permitAll()
+                .antMatchers("/api/v1/categories/**").permitAll()
                 .antMatchers("/api/v1/test/**").permitAll()
-                .anyRequest().authenticated();
+                .antMatchers(HttpMethod.GET,"/api/v1/articles/**").permitAll()
+                .anyRequest().authenticated().and()
+                .logout().invalidateHttpSession(true).deleteCookies("JSESSIONID");
 
         // Add jwt token filter to validate tokens with every request
-        // code block
+        http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
+
+
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
@@ -74,10 +111,21 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
         configuration.setAllowedOrigins(Collections.singletonList("*"));
         configuration.setAllowedHeaders(Collections.singletonList("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization", ""));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public Parser uaParser() throws IOException {
+        return new Parser();
+    }
+
+    @Bean(name="GeoIPCity")
+    public DatabaseReader databaseReader() throws IOException {
+        File database = ResourceUtils.getFile("classpath:maxmind/GeoLite2-City.mmdb");
+        return new DatabaseReader.Builder(database).build();
     }
 
 }
